--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "deepcopy": "^2.1.0",
     "element-plus": "^2.3.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
