--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.3.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "mitt": "^3.0.0",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
     "vue": "^3.2.47"
