--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lowcode-demo",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,18 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
+    "@vitejs/plugin-vue-jsx": "^2.1.1",
+    "clipboard": "^2.0.11",
     "deepcopy": "^2.1.0",
-    "element-plus": "^2.3.1",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
+    "element-plus": "^2.2.26",
     "mitt": "^3.0.0",
-    "path": "^0.12.7",
-    "sass": "^1.60.0",
-    "sass-loader": "^13.2.2",
-    "vue": "^3.2.47"
+    "sass": "^1.56.1",
+    "vue": "^3.2.45",
+    "vue3-json-viewer": "^2.2.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.2.0"
+    "@vitejs/plugin-vue": "^3.2.0",
+    "vite": "^3.2.4"
   }
 }
